[package]
name = "davids_sling"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
colored = "2.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-client = "1.17"
solana-sdk = "1.17"
solana-transaction-status = "1.9.29"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }